feat: Implémentation du GUI du desktop client